Avoid transitioning visibility, breaks on Chrome iOS.

--- a/source/stylesheets/_header.css.scss
+++ b/source/stylesheets/_header.css.scss
@@ -63,11 +63,11 @@ header {
           margin: 0;
           padding: 1em;
           visibility: hidden;
-          opacity: 0;
           position: fixed;
+          opacity: 0;
           @include chinese-symbol-background();
           @include transition(.2s ease-in-out);
-          @include transition-property(opacity, visibility);
+          @include transition-property(opacity);
           @include box-shadow(0px 0px 24px rgba(10, 10, 10, 0.55));
 
           .product-name {
